namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-digital-prison-services-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-digital-prison-services-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "connect-dps"
    cloud-platform.justice.gov.uk/slack-alert-channel: "dps_alerts_non_prod"
    cloud-platform.justice.gov.uk/application: "HMPPS Digital Prison Services"
    cloud-platform.justice.gov.uk/owner: "Connect DPS: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-digital-prison-services.git"
    cloud-platform.justice.gov.uk/team-name: "Connect DPS"
